--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,4 +19,11 @@ img {
 .main-header {
 	background: url("../img/header__background.png") no-repeat top center;
 	background-size: 100% 90%;
+
+	.main-header__nav {
+		display: flex;
+		justify-content: space-between;
+		width: 90vw;
+		margin: 3vh auto;
+	}
 }
