--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,14 +6,18 @@
 	line-height: $l;
  }
 
-
 body {
 	margin: 0;
 	padding: 0;
 	@include fonts(300,14px,24px);
 	font-family: 'Poppins', sans-serif;
 	color: #808080;
+	overflow: hidden;
+}
 
+a {
+	text-decoration: none;
+	color: inherit;
 }
 
 img {
@@ -24,7 +28,7 @@ img {
 .container {
 	padding: 0 10vw;
 	margin: 0 auto;
-
+	position: relative;
 }
 
 button {
@@ -84,5 +88,83 @@ button:hover {
 		margin: 0 0 25px 0;
 	}
 
+//  бургер меню
+	.main-header__nav-menu {
+		width: 30px;
+		height: 22px;
+		position: relative;
+		transform: rotate(0deg);
+		transition: .5s ease-in-out;
+		cursor: pointer;
+  }
+  .main-header__nav-menu span {
+		display: block;
+		position: absolute;
+		height: 2px;
+		width: 100%;
+		background: #fff;
+		border-radius: 9px;
+		opacity: 1;
+		right: 0;
+		transform: rotate(0deg);
+		transition: .25s ease-in-out;
+  }
+  .main-header__nav-menu span:nth-child(1) {
+		top: 0px;
+		width: 24px;
+		transform-origin: left center;
+  }
+  .main-header__nav-menu span:nth-child(2) {
+		top: 6px;
+		transform-origin: left center;
+  }
+  .main-header__nav-menu span:nth-child(3) {
+		top: 12px;
+		width: 24px;
+		transform-origin: left center;
+  }
+  .main-header__nav-menu span:nth-child(4) {
+		top: 18px;
+		transform-origin: left center;
+}
+  .main-header__nav-menu.open {
+	transform: rotateZ(450deg);
+  }
 
+
+	.nav-list-wrapper {
+		// width: 50vw;
+		// height: 100vh;
+		background-color: transparent;
+		transition: all ease 0.7s;
+		color: #fff;
+}
+	.hidden {
+		transform: translateY(-300%);
+		position: block;
+		top: 0;
+		left: 20vw;
+	}
+
+	.main-header__nav-list {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 30px;
+
+}
+	.main-header__nav-item {
+		@include fonts(600,24px ,36px );
+		text-transform: uppercase;
+		transition: 0.5s all ease;
+}
+	.main-header__nav-item:hover {
+		color: #ff6600;
+		padding: 0 0.8em;
+		background-color: #fff;
+		border-radius: 15px;
+	}
 }
