--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   font-family: "Poppins", sans-serif;
   color: #808080;
-  overflow: hidden;
+  max-width: 100vw;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -49,6 +54,7 @@ button:hover {
 .main-header {
   background: url("../img/header__background.png") no-repeat top center;
   background-size: 100% 100%;
+  margin-bottom: 60px;
 }
 .main-header .main-header__container {
   height: 80vh;
@@ -152,4 +158,53 @@ button:hover {
   padding: 0 0.8em;
   background-color: #fff;
   border-radius: 15px;
+}
+
+.features__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.features__container .features__block-name {
+  text-align: center;
+  color: #000;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 42px;
+  margin-bottom: 6px;
+}
+.features__container .features__text {
+  margin-bottom: 32px;
+}
+.features__container .features__content {
+  display: flex;
+  margin-bottom: 60px;
+  -moz-column-gap: 3vw;
+       column-gap: 3vw;
+}
+.features__container .features__content .features__content-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 390px;
+  border-radius: 15px;
+  background-color: #FAFAFA;
+  text-align: center;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+}
+.features__container .features__content .features__content-block img {
+  margin: 40px 0 25px;
+}
+.features__container .features__content .features__content-block h3 {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000;
+  margin-bottom: 12px;
+  padding: 0 3vw;
+}
+.features__container .features__content .features__content-block p {
+  margin-bottom: 40px;
+  padding: 0 3vw;
 }
