--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,10 +9,15 @@
 body {
 	margin: 0;
 	padding: 0;
-	@include fonts(300,14px,24px);
+	@include fonts(400,14px,24px);
 	font-family: 'Poppins', sans-serif;
 	color: #808080;
-	overflow: hidden;
+	max-width: 100vw;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+	margin: 0;
+	padding: 0;
 }
 
 a {
@@ -54,6 +59,7 @@ button:hover {
 .main-header {
 	background: url("../img/header__background.png") no-repeat top center;
 	background-size: 100% 100%;
+	margin-bottom: 60px;
 
 	.main-header__container {
 		height: 80vh;
@@ -167,4 +173,57 @@ button:hover {
 		background-color: #fff;
 		border-radius: 15px;
 	}
+}
+
+.features__container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	.features__block-name {
+	text-align: center;
+	color: #000;
+	@include fonts(600,32px ,42px );
+	margin-bottom: 6px;
+	}
+
+	.features__text {
+		margin-bottom: 32px;
+	}
+
+	.features__content {
+		display: flex;
+		margin-bottom: 60px;
+		column-gap: 3vw;
+
+		.features__content-block {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			max-width: 390px;
+			border-radius: 15px;
+			background-color: #FAFAFA;
+			text-align: center;
+			box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+			
+			img {
+				margin: 40px 0 25px;
+			}
+	
+			h3 {
+				@include fonts(600,16px ,24px );
+				color: #000;
+				margin-bottom: 12px;
+				padding: 0 3vw;
+			}
+			
+			p {
+				margin-bottom: 40px;
+				padding: 0 3vw;
+			}
+			
+		}
+	}
+
 }
