--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,20 @@ body {
   max-width: 100vw;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
 }
@@ -35,7 +48,7 @@ button {
   background-color: transparent;
   padding: 0;
   cursor: pointer;
-  color: #FF6800;
+  color: #ff6800;
   font-weight: 600;
   font-size: 14px;
   line-height: 47px;
@@ -189,7 +202,7 @@ button:hover {
   align-items: center;
   max-width: 390px;
   border-radius: 15px;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   text-align: center;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
 }
@@ -207,4 +220,134 @@ button:hover {
 .features__container .features__content .features__content-block p {
   margin-bottom: 40px;
   padding: 0 3vw;
+}
+
+#video {
+  width: 100%;
+  position: relative;
+  margin-bottom: 60px;
+}
+#video-over {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  display: none;
+}
+#video-play {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 102px;
+  height: 102px;
+  border-radius: 50%;
+  z-index: 1;
+  cursor: pointer;
+  transition: 0.2s ease;
+  transition-property: opacity, visibility;
+}
+#video-play:hover::before {
+  transform: scale(1.2);
+}
+#video video {
+  width: 100%;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 600px;
+}
+#video.video-is-playing #video-over {
+  display: block;
+}
+#video.video-is-playing #video-play {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.testimonials__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.testimonials__container .testimonials__headline {
+  margin-bottom: 6px;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 42px;
+  color: #000;
+}
+.testimonials__container .testimonials__headline-text {
+  margin-bottom: 30px;
+}
+.testimonials__container .testimonials__content {
+  display: flex;
+  gap: 35px;
+  padding-bottom: 50px;
+}
+.testimonials__container .testimonials__item {
+  max-width: 390px;
+  border-radius: 15px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  position: relative;
+  background-color: #fff;
+}
+.testimonials__container .testimonials__item:before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  bottom: -2px;
+  left: -2px;
+  right: -2px;
+  background: linear-gradient(35deg, #FF6800, #FF1F00);
+  border-radius: 17px;
+  z-index: -1;
+}
+.testimonials__container .blockquote {
+  margin: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.testimonials__container .blockquote__text {
+  text-align: center;
+  margin-bottom: 24px;
+}
+.testimonials__container .blockquote__quote-owner-info {
+  display: grid;
+  grid-template-columns: 55px 1fr;
+  grid-template-rows: 30px 30px;
+  -moz-column-gap: 15px;
+       column-gap: 15px;
+  align-items: center;
+}
+.testimonials__container .blockquote__photo {
+  grid-row: 1/3;
+}
+.testimonials__container .blockquote__name {
+  color: #000;
+}
+.testimonials__container .blockquote__post {
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 10px;
+}
+.testimonials__container .testimonials__slider {
+  display: flex;
+  gap: 24px;
+  margin-bottom: 60px;
+}
+.testimonials__container .testimonials__slider-item {
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+  border-radius: 50%;
+}
+.testimonials__container .slider-item_active {
+  background: linear-gradient(90deg, #FF6800 0%, #FF1F00 100%);
+  cursor: pointer;
 }
