--- a/css/style.css
+++ b/css/style.css
@@ -242,8 +242,8 @@ button:hover {
   bottom: 0;
   left: 0;
   margin: auto;
-  width: 102px;
-  height: 102px;
+  width: 56px;
+  height: 56px;
   border-radius: 50%;
   z-index: 1;
   cursor: pointer;
@@ -311,6 +311,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 310px;
 }
 .testimonials__container .blockquote__text {
   text-align: center;
@@ -419,4 +420,98 @@ button:hover {
   from {
     width: 0;
   }
+}
+
+.faq__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 40px 0 20px 0;
+}
+.faq__container .faq__content {
+  max-width: 500px;
+}
+.faq__container .faq__headline {
+  color: #000000;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 42px;
+  margin-bottom: 5px;
+}
+.faq__container .faq__text {
+  margin-bottom: 20px;
+}
+.faq__container .faq__list {
+  display: flex;
+  gap: 12px;
+  flex-direction: column;
+}
+.faq__container .faq__item {
+  max-width: 100%;
+  padding: 15px 45px 15px 18px;
+  background: linear-gradient(90deg, #FF6800 0%, #FF1F00 100%);
+  border-radius: 15px;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+.faq__container .faq__item:hover {
+  font-size: 1.1em;
+}
+.faq__container .faq__item:before {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 2px;
+  background-color: #fff;
+  top: 50%;
+  right: 23px;
+}
+.faq__container .faq__item:after {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 2px;
+  background-color: #fff;
+  top: 50%;
+  right: 23px;
+  transform: rotate(90deg);
+}
+.faq__container .faq__item:hover:after,
+.faq__container .faq__item:hover:before {
+  height: 4px;
+  transition: all 0.1s ease;
+  width: 16px;
+  top: 49% px;
+  right: 22px;
+}
+.faq__container .faq__question {
+  color: #fff;
+}
+.faq__container .faq__answer {
+  display: none;
+}
+.faq__container .faq__item_show {
+  background: #fff;
+  position: relative;
+  border-radius: 15px;
+  border: #ff6800 solid 2px;
+}
+.faq__container .faq__item_show:before {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 2px;
+  background-color: #000;
+  top: 50%;
+  right: 23px;
+  z-index: 1;
+}
+.faq__container .faq__question_show {
+  color: #333333;
+  margin-bottom: 20px;
+}
+.faq__container .faq__answer_show {
+  color: #808080;
+  display: block;
 }
